--- a/style.css
+++ b/style.css
@@ -11,6 +11,6 @@
         @apply font-body;
     }
     .container {
-        @apply h-20 px-10 py-12 max-w-7xl mt-16 mx-auto lg:px-8 lg:mt-32;
+        @apply px-4 py-12 max-w-7xl  mx-auto lg:px-28 lg:mt-8;
     }
 }
